--- a/python/web/templates/index.html
+++ b/python/web/templates/index.html
@@ -31,5 +31,15 @@
         <!-- 데이터를 보내는 버튼  -->
         <input type="submit">
     </form>
+    <h1>post 방식으로 데이터 보내기</h1>
+    <form action="/login" method="post">
+        <label>ID</label>
+        <input type="text" name="_id">
+        <br>
+        <label>PASSWORD</label>
+        <input type="password" name="_pass">
+        <br>
+        <input type="submit" value="로그인">
+    </form>
 </body>
 </html>
